feat: new tests and config to avoid warnings