@@ -23,6 +23,10 @@ repositories {
     mavenCentral()
 }
 
+test {
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
+}
+
 dependencies {
     implementation 'org.mapstruct:mapstruct:1.6.0'
     implementation 'org.modelmapper:modelmapper:3.1.1'
